# orx-pseudo-default

./: Cargo.toml  README.md
src/: lib.rs  pseudo_default.rs
src/implementations/: collections.rs  imp_from_default.rs  mod.rs  primitives.rs
tests/: derive.rs  take_vec.rs
