[package]
name = "orx-pseudo-default"
version = "1.4.0"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "PseudoDefault trait allows to create a cheap default instance of a type, which does not claim to be useful."
license = "MIT"
repository = "https://github.com/orxfun/orx-pseudo-default/"
keywords = ["default", "pseudo", "uninitialized", "swap"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default-derive = { version = "1.0", optional = true }

[features]
default = ["std", "derive"]
std = []
derive = ["orx-pseudo-default-derive"]
